compatibility-tests/compile-fail/tests/ui/attribute-misuse-opt-out-wrong-field.stderr
error: `source(false)` attribute is only valid on a field named "source", not on other fields
 --> $DIR/attribute-misuse-opt-out-wrong-field.rs:7:21
  |
7 |             #[snafu(source(false))]
  |                     ^^^^^^^^^^^^^

error: `backtrace(false)` attribute is only valid on a field named "backtrace", not on other fields
  --> $DIR/attribute-misuse-opt-out-wrong-field.rs:19:21
   |
19 |             #[snafu(backtrace(false))]
   |                     ^^^^^^^^^^^^^^^^

error: `implicit(false)` attribute is only valid on a field named "location", not on other fields
  --> $DIR/attribute-misuse-opt-out-wrong-field.rs:31:21
   |
31 |             #[snafu(implicit(false))]
   |                     ^^^^^^^^^^^^^^^
